Fixed scrolling animation bug caused by html overflow property

--- a/src/index.css
+++ b/src/index.css
@@ -17,11 +17,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-html, body {
+body {
   margin: 0;
   min-height: 100vh;
   overflow-x: hidden;
-  max-width: 100vw;
   background-color: #020202;
   transition: filter 0.5s ease-in-out;
 }
